make sure spacing of hue control is the same as others

--- a/css/toolbar/channel-item.css
+++ b/css/toolbar/channel-item.css
@@ -107,6 +107,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-top: 5px;
 }
 
 #navMenuContent .groups .channelItem .deactivate-hue {
